[gd_scene load_steps=28 format=2]

[ext_resource path="res://GridMap.gd" type="Script" id=1]
[ext_resource path="res://main menu/LevelSelect.gd" type="Script" id=2]
[ext_resource path="res://player/Cube.tscn" type="PackedScene" id=3]
[ext_resource path="res://tiles/Tile.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/fonts/Transuranium/trans___.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://main menu/MenuHub.gd" type="Script" id=6]
[ext_resource path="res://main menu/GUI.gd" type="Script" id=7]
[ext_resource path="res://assets/logo.glb" type="PackedScene" id=8]
[ext_resource path="res://main menu/Level Button.tscn" type="PackedScene" id=9]
[ext_resource path="res://YesNoDialog.tscn" type="PackedScene" id=10]
[ext_resource path="res://main menu/Settings.gd" type="Script" id=11]
[ext_resource path="res://main menu/Credits.gd" type="Script" id=12]

[sub_resource type="ProceduralSky" id=1]
sky_top_color = Color( 0, 0, 0, 1 )
sky_horizon_color = Color( 0.74902, 0.909804, 0.647059, 1 )
sky_curve = 0.263535
ground_bottom_color = Color( 0.698039, 0.847059, 0.698039, 1 )
ground_horizon_color = Color( 0.74902, 0.909804, 0.647059, 1 )
ground_curve = 0.393966
sun_angle_min = 0.0
sun_curve = 0.000112177
sun_energy = 0.0

[sub_resource type="Environment" id=2]
background_mode = 2
background_sky = SubResource( 1 )
background_color = Color( 1, 1, 1, 1 )
ambient_light_color = Color( 1, 1, 1, 1 )
ambient_light_sky_contribution = 0.5
fog_enabled = true
fog_color = Color( 0.705882, 0.858824, 0.690196, 1 )
fog_depth_enabled = false
fog_depth_end = 0.0
fog_depth_curve = 0.450625
fog_transmit_curve = 0.535887
fog_height_enabled = true
fog_height_min = 0.0
fog_height_max = -20.0
fog_height_curve = 0.901251
ss_reflections_fade_in = 0.409812
ss_reflections_depth_tolerance = 0.4
ssao_intensity2 = 0.0
ssao_bias = 0.001
ssao_color = Color( 0.2, 0.2, 0.2, 1 )
ssao_blur = 2
glow_enabled = true
glow_levels/2 = true
glow_hdr_threshold = 1.5
glow_bicubic_upscale = true
adjustment_enabled = true
adjustment_brightness = 0.99
adjustment_contrast = 1.22

[sub_resource type="SpatialMaterial" id=3]
flags_transparent = true
flags_unshaded = true
vertex_color_use_as_albedo = true
vertex_color_is_srgb = true
params_billboard_mode = 1
albedo_color = Color( 0.929412, 0.988235, 0.803922, 1 )
distance_fade_mode = 1
distance_fade_min_distance = 0.0
distance_fade_max_distance = 2.0

[sub_resource type="QuadMesh" id=4]
material = SubResource( 3 )
size = Vector2( 0.3, 0.3 )

[sub_resource type="Gradient" id=5]
offsets = PoolRealArray( 0, 0.464706, 0.564706, 1 )
colors = PoolColorArray( 1, 1, 1, 0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0 )

[sub_resource type="InputEventAction" id=6]
action = "ui_cancel"

[sub_resource type="ShortCut" id=7]
shortcut = SubResource( 6 )

[sub_resource type="DynamicFont" id=8]
size = 70
use_mipmaps = true
use_filter = true
font_data = ExtResource( 5 )

[sub_resource type="Environment" id=9]
background_mode = 1
background_color = Color( 0.913725, 0.913725, 0.913725, 1 )
ambient_light_color = Color( 1, 1, 1, 1 )

[sub_resource type="World" id=10]
environment = SubResource( 9 )

[sub_resource type="InputEventAction" id=11]
action = "ui_cancel"

[sub_resource type="ShortCut" id=12]
shortcut = SubResource( 11 )

[sub_resource type="StyleBoxFlat" id=13]
content_margin_left = 9.0
content_margin_right = 9.0
content_margin_top = 9.0
content_margin_bottom = 9.0
bg_color = Color( 0.270588, 0.270588, 0.270588, 1 )
draw_center = false
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color( 0.129412, 0.129412, 0.129412, 1 )
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12
corner_detail = 1

[sub_resource type="StyleBoxFlat" id=15]
bg_color = Color( 0.180392, 0.180392, 0.180392, 0.54902 )

[sub_resource type="Animation" id=14]
length = 7.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("CamRoot:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( 0, 360, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CamRoot/Logo:translation")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 3.4, 7 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 1.55333, 0 ), Vector3( 0, 1.78705, 0 ), Vector3( 0, 1.55333, 0 ) ]
}

[node name="Menu" type="Spatial"]

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 2 )

[node name="Tile" parent="." instance=ExtResource( 4 )]

[node name="Cube" parent="." instance=ExtResource( 3 )]

[node name="CamRoot" type="Spatial" parent="."]

[node name="Logo" parent="CamRoot" instance=ExtResource( 8 )]
transform = Transform( 0.892602, 0, 0.450846, 0, 1, 0, -0.450846, 0, 0.892602, 0, 1.55333, 0 )

[node name="Camera" type="Camera" parent="CamRoot"]
transform = Transform( 0.993445, -0.114142, 0.00624564, 0.0964191, 0.866035, 0.490598, -0.0614069, -0.48678, 0.871363, 2.00688, 2.81623, 3.69611 )
fov = 61.8

[node name="CPUParticles" type="CPUParticles" parent="CamRoot/Camera"]
transform = Transform( 0.993444, 0.096419, -0.0614069, -0.114142, 0.866035, -0.48678, 0.00624561, 0.490598, 0.871363, -1.75692, 2.11662, -3.18314 )
amount = 800
local_coords = false
mesh = SubResource( 4 )
emission_shape = 2
emission_box_extents = Vector3( 40, 20, 40 )
tangential_accel = 19.23
tangential_accel_random = 0.39
color_ramp = SubResource( 5 )

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( 1, 0, 0, 0, 0.322464, 0.946582, 0, -0.946582, 0.322464, 0, 4.65784, 2.7975 )
light_energy = 0.59
directional_shadow_mode = 0
directional_shadow_max_distance = 10.0

[node name="GUI" type="CanvasLayer" parent="."]
script = ExtResource( 7 )

[node name="MenuHub" type="Control" parent="GUI"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Hub" type="VBoxContainer" parent="GUI/MenuHub"]
anchor_left = 0.483666
anchor_top = 0.255843
anchor_right = 1.00167
anchor_bottom = 0.747509
margin_left = -1.56799
margin_top = 0.199997
margin_right = -32.0
margin_bottom = 0.199982
custom_constants/separation = 29
alignment = 1
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": true
}

[node name="Play" type="Button" parent="GUI/MenuHub/Hub"]
margin_right = 500.0
margin_bottom = 52.0
size_flags_vertical = 3
text = "Play"

[node name="Settings" type="Button" parent="GUI/MenuHub/Hub"]
margin_top = 81.0
margin_right = 500.0
margin_bottom = 133.0
size_flags_vertical = 3
text = "Settings"

[node name="Credits" type="Button" parent="GUI/MenuHub/Hub"]
margin_top = 162.0
margin_right = 500.0
margin_bottom = 214.0
size_flags_vertical = 3
text = "Credits"

[node name="Quit" type="Button" parent="GUI/MenuHub/Hub"]
margin_top = 243.0
margin_right = 500.0
margin_bottom = 295.0
size_flags_vertical = 3
shortcut_in_tooltip = false
shortcut = SubResource( 7 )
text = "Quit"

[node name="GameLogo" type="Label" parent="GUI/MenuHub"]
visible = false
anchor_top = 0.11
anchor_right = 0.481
anchor_bottom = 1.0
margin_left = 71.0
margin_right = -0.544037
custom_fonts/font = SubResource( 8 )
text = "Code Cube"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QuitDialog" parent="GUI/MenuHub" instance=ExtResource( 10 )]
dialog = "Are you sure you want to quit?"

[node name="Credit" type="Label" parent="GUI/MenuHub"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -302.631
margin_top = -32.0043
margin_right = -9.63086
margin_bottom = -7.00427
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Created by: Roujel Williams"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LevelSelect" type="Control" parent="GUI"]
anchor_top = -1.0
anchor_right = 1.0
margin_top = 0.293335
margin_bottom = -2.70667
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Viewport" type="Viewport" parent="GUI/LevelSelect"]
size = Vector2( 128, 128 )
own_world = true
world = SubResource( 10 )
transparent_bg = true
handle_input_locally = false
msaa = 4
keep_3d_linear = true
usage = 3
render_target_v_flip = true
render_target_update_mode = 0

[node name="GridMap" type="Spatial" parent="GUI/LevelSelect/Viewport"]
script = ExtResource( 1 )

[node name="Camera" type="Camera" parent="GUI/LevelSelect/Viewport"]
transform = Transform( -1, -2.49609e-07, 2.09447e-07, 0, 0.642788, 0.766044, -3.25841e-07, 0.766044, -0.642788, -2, 7, -8 )

[node name="Template" parent="GUI/LevelSelect" instance=ExtResource( 9 )]
visible = false

[node name="Back" type="Button" parent="GUI/LevelSelect"]
margin_left = 11.9106
margin_top = 4.76422
margin_right = 144.911
margin_bottom = 34.7642
shortcut_in_tooltip = false
shortcut = SubResource( 12 )
text = "Back"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Worlds" type="TabContainer" parent="GUI/LevelSelect"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 51.0
margin_top = 42.0
margin_right = -53.0
margin_bottom = -42.0
tab_align = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sandbox" type="Control" parent="GUI/LevelSelect/Worlds"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = 40.0
margin_right = -5.0
margin_bottom = -5.0

[node name="New Level" type="Button" parent="GUI/LevelSelect/Worlds/Sandbox"]
anchor_right = 1.0
anchor_bottom = 0.081
margin_left = 15.0
margin_top = 9.0
margin_right = -24.0
margin_bottom = 0.0919991
text = "New Level"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Scroll" type="ScrollContainer" parent="GUI/LevelSelect/Worlds/Sandbox"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 9.0
margin_top = 52.0
margin_right = -9.0
margin_bottom = -9.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/bg = SubResource( 13 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Grid" type="GridContainer" parent="GUI/LevelSelect/Worlds/Sandbox/Scroll"]
visible = false
margin_left = 9.0
margin_top = 9.0
margin_right = 883.0
margin_bottom = 398.0
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 3

[node name="Label" type="Label" parent="GUI/LevelSelect/Worlds/Sandbox/Scroll"]
margin_left = 9.0
margin_top = 191.0
margin_right = 883.0
margin_bottom = 216.0
size_flags_horizontal = 3
size_flags_vertical = 6
text = "You have no levels! Why not create a new one?"
align = 1
valign = 1

[node name="World 1" type="Control" parent="GUI/LevelSelect/Worlds"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = 40.0
margin_right = -5.0
margin_bottom = -5.0

[node name="Scroll" type="ScrollContainer" parent="GUI/LevelSelect/Worlds/World 1"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 9.0
margin_top = 9.0
margin_right = -9.0
margin_bottom = -9.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/bg = SubResource( 13 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Grid" type="GridContainer" parent="GUI/LevelSelect/Worlds/World 1/Scroll"]
margin_left = 9.0
margin_top = 9.0
margin_right = 883.0
margin_bottom = 441.0
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 3

[node name="Apology" type="Label" parent="GUI/LevelSelect/Worlds/World 1"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 111.0
margin_right = -110.0
text = "Sorry for the lack of levels and a tutorial. You may use the sandbox mode and experiment with it in the meantime. More will come soon. Hang in there! :)"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DeleteDialog" parent="GUI/LevelSelect" instance=ExtResource( 10 )]
margin_left = 18.1713
margin_top = 87.7179
margin_right = 1.17126
margin_bottom = -82.7821
dialog = "Are you sure you want to delete this level?
You'll never get it back!"

[node name="Settings" type="Control" parent="GUI"]
anchor_left = 1.0
anchor_right = 2.0
anchor_bottom = 1.0
script = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Panel" type="Panel" parent="GUI/Settings"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 77.0
margin_top = 40.0
margin_right = -43.0
margin_bottom = -85.0
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="TabContainer" type="TabContainer" parent="GUI/Settings/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 17.0
margin_right = -20.0
margin_bottom = -21.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Graphics" type="Control" parent="GUI/Settings/Panel/TabContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = 40.0
margin_right = -5.0
margin_bottom = -5.0

[node name="Scroll" type="ScrollContainer" parent="GUI/Settings/Panel/TabContainer/Graphics"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 15.0
margin_top = 5.0
margin_right = -15.0
margin_bottom = -12.0
scroll_horizontal_enabled = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBox" type="VBoxContainer" parent="GUI/Settings/Panel/TabContainer/Graphics/Scroll"]
margin_right = 827.0
margin_bottom = 392.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Audio" type="Control" parent="GUI/Settings/Panel/TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = 40.0
margin_right = -5.0
margin_bottom = -5.0

[node name="Scroll" type="ScrollContainer" parent="GUI/Settings/Panel/TabContainer/Audio"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 15.0
margin_top = 5.0
margin_right = -15.0
margin_bottom = -12.0
scroll_horizontal_enabled = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBox" type="VBoxContainer" parent="GUI/Settings/Panel/TabContainer/Audio/Scroll"]
margin_right = 827.0
margin_bottom = 392.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Back" type="Button" parent="GUI/Settings"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 24.3556
margin_top = -54.3529
margin_right = 157.356
margin_bottom = -24.3529
text = "Cancel"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Save" type="Button" parent="GUI/Settings"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 176.82
margin_top = -54.873
margin_right = 309.82
margin_bottom = -24.873
text = "OK"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Credits" type="Panel" parent="GUI"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 2.0
custom_styles/panel = SubResource( 15 )
script = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="GUI/Credits"]
anchor_right = 1.0
anchor_bottom = 1.0
bbcode_enabled = true
bbcode_text = "[center][b]
[color=#999999]Music[/color][/b]
Mibli Entertainment[/center][center][b][color=#999999]﻿
Font[/color][/b]
Fonts For Flash from 1001fonts.com[/center][center][b]﻿[color=#999999]
Everything Else[/color][/b]
Roujel Williams (SIsilicon)

[b][color=#000000]This game was created with the Godot Game Engine.
[/color]
[/b]
[img=<500>]res://assets/logo.svg[/img]
[/center]
"
text = "
Music
Mibli Entertainment﻿
Font
Fonts For Flash from 1001fonts.com﻿
Everything Else
Roujel Williams (SIsilicon)

This game was created with the Godot Game Engine.




"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Back" type="Button" parent="GUI/Credits"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 36.5826
margin_top = -60.9945
margin_right = 169.583
margin_bottom = -30.9945
text = "Back"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="GUI"]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "cube-display"
anims/cube-display = SubResource( 14 )
[connection signal="pressed" from="GUI/MenuHub/Hub/Play" to="GUI/MenuHub" method="_on_Play_pressed"]
[connection signal="pressed" from="GUI/MenuHub/Hub/Settings" to="GUI/MenuHub" method="_on_Settings_pressed"]
[connection signal="pressed" from="GUI/MenuHub/Hub/Credits" to="GUI/MenuHub" method="_on_Credits_pressed"]
[connection signal="pressed" from="GUI/MenuHub/Hub/Quit" to="GUI/MenuHub" method="_on_Quit_pressed" binds= [ "" ]]
[connection signal="pressed" from="GUI/MenuHub/QuitDialog" to="GUI/MenuHub" method="_on_Quit_pressed"]
[connection signal="pressed" from="GUI/LevelSelect/Back" to="GUI/LevelSelect" method="_on_Back_pressed"]
[connection signal="pressed" from="GUI/LevelSelect/Worlds/Sandbox/New Level" to="GUI/LevelSelect" method="_on_New_Level_pressed"]
[connection signal="pressed" from="GUI/Settings/Back" to="GUI/Settings" method="_on_Back_pressed"]
[connection signal="pressed" from="GUI/Settings/Save" to="GUI/Settings" method="_on_Save_pressed"]
[connection signal="pressed" from="GUI/Credits/Back" to="GUI/Credits" method="_on_Back_pressed"]
